--- a/package.json
+++ b/package.json
@@ -41,15 +41,13 @@
     "react-countup": "^1.3.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
     "react-social": "^1.7.1",
     "react-visibility-sensor": "^3.4.0",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.1",
     "sass-loader": "^4.0.2",
     "url-loader": "^0.5.7",
-    "velocity-react": "^1.1.11"
+    "velocity-react": "^1.1.11",
+    "webpack-bundle-analyzer": "^2.9.1"
   }
 }
