--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
-    "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.5.0",
-    "classnames": "^2.2.3",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.23.1",
     "eslint": "^3.10.2",
-    "eslint-config-airbnb-base": "^10.0.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.13.0",
     "file-loader": "^0.8.5",
     "postcss-loader": "^0.8.1",
     "pre-commit": "^1.1.3",
@@ -35,7 +34,10 @@
     "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.7",
+    "babel-eslint": "^8.2.1",
+    "classnames": "^2.2.3",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.0.0",
     "node-sass": "^3.10.1",
     "react": "^15.0.0",
     "react-countup": "^1.3.0",
@@ -43,11 +45,10 @@
     "react-hot-loader": "^1.3.0",
     "react-social": "^1.7.1",
     "react-visibility-sensor": "^3.4.0",
-    "redux": "^3.3.1",
-    "redux-actions": "^0.9.1",
     "sass-loader": "^4.0.2",
     "url-loader": "^0.5.7",
     "velocity-react": "^1.1.11",
     "webpack-bundle-analyzer": "^2.9.1"
-  }
+  },
+  "pre-commit": "lint"
 }
